Fix French translations for 'decider' and 'memoriser'

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ const vocabList = [
   { de: "eine gute / schlechte Note", fr: ["une bonne note", "une mauvaise note"] },
   { de: "das Taschengeld", fr: ["l'argent de poche"] },
   { de: "die Nachricht", fr: ["le message"] },
-  { de: "entscheiden", fr: ["decider"] },
+  { de: "entscheiden", fr: ["décider"] },
   { de: "sich konzentrieren", fr: ["se concentrer"] },
-  { de: "auswendig lernen / sich einprägen", fr: ["memoriser"] },
+  { de: "auswendig lernen / sich einprägen", fr: ["mémoriser"] },
   { de: "aufräumen / ordnen", fr: ["ranger"] },
   { de: "die Sachen", fr: ["les affaires"] },
   { de: "ohne", fr: ["sans"] },
